# matiks-realtime-engine

./: .gitignore  README.md  package.json  tsconfig.json
bench/: load-frames.ts  replay-launch.ts  run.ts  scenarios.ts
demo/: App.tsx  DuelScreen.tsx  aes.ts  app.json  decrypt.ts  index.ts  metro.config.js  package-lock.json  package.json
demo-staging/app/: App.tsx  app.json  decrypt.ts  index.ts  package.json  questions.ts  tsconfig.json
demo-staging/matiks-realtime/: README.md  package.json  tsconfig.json
demo/duel/: polyfills.ts
modules/react-native-matiks-realtime/: .gitignore  nitro.json  package.json
modules/react-native-matiks-realtime/android/: CMakeLists.txt
modules/react-native-matiks-realtime/android/src/main/cpp/: cpp-adapter.cpp
reports/: 01-performance-teardown.html  02-engine-verdict.html  03-gap-backlog.html  04-decrypt-timing-test.md  05-architecture-data-layer.html  06-capture-playbook.md  07-native-findings.md  08-track-b-data-layer-proposal.md  09-stability-bugs.md  10-web-trace-findings.md  11-bug-reports.md  12-rich-session-findings.md  13-native-decrypt-ondevice.md  14-testing.md  15-bridge-bottleneck-ondevice.md  16-data-layer-measured.md  17-webengage-web-crash.md
src/: index.native.ts  index.ts  index.web.ts
src/core/: clock.ts  codec.ts  duel.ts  engine.ts  prediction.ts  transport.ts  types.ts
src/data/: batcher.ts  gateway.ts  index.ts  keys.ts  policy.ts  (+1 more)
test/: clock.test.ts  codec.test.ts  data.test.ts  engine.test.ts  prediction.test.ts  ringbuffer.test.ts  sim.test.ts  store.test.ts
tools/: scan-capture.ts
(+38 files in other folders)
